<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#FFFFFF">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:background="@android:drawable/edit_text"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="#263238"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
